# sbp_memory

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SWEBENCH_README.md  USAGE.md  pyproject.toml  requirements.txt  sbp-problems.jsonl  setup.py
confucius/analects/code/: commands.py  entry.py  llm_params.py  reminders.py  tasks.py
confucius/analects/note_taker/: commands.py  entry.py  tasks.py
confucius/cli/: main.py
confucius/common/: __init__.py  code.py
confucius/core/: __init__.py  artifact.py  memory.py  storage.py  types.py
confucius/core/analect/: __init__.py  analect.py  base.py
confucius/core/chat_models/: base_chat.py
confucius/core/chat_models/azure/: base.py  model.py  openai.py
confucius/core/chat_models/bedrock/: anthropic.py  base.py  (+3 more)
confucius/core/entry/: __init__.py  base.py  decorators.py  entry.py  manager.py  mixin.py
confucius/core/io/: __init__.py  base.py  std.py
confucius/core/llm_manager/: __init__.py  auto.py  azure.py  base.py  bedrock.py  constants.py  google.py  llm_params.py
confucius/lib/: confucius.py  entry_repl.py
confucius/orchestrator/: __init__.py  anthropic.py  base.py  exceptions.py  llm.py  prompts.py  tags.py  types.py
confucius/orchestrator/extensions/: __init__.py  base.py  plain_text.py  tag_with_id.py  tool_use.py
confucius/output_parsers/: __init__.py  xml.py
confucius/utils/: artifact.py  asyncio.py  asyncio_utils.py  decorators.py  json.py  pydantic.py  string.py  timeutil.py  validator.py
scripts/: run_batch_swebench.py  run_note_taker.py  run_swebench.py  utils.py
(+67 files in other folders)
