[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "confucius"
version = "0.1.0"
description = "Confucius core utilities (OSS slice)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Meta", email = "opensource@meta.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.scripts]
confucius = "confucius.cli.main:main"
